changes in index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>hello world</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam, libero nihil? Earum nisi iste quibusdam reiciendis libero fuga ad voluptatibus voluptate architecto magni adipisci vitae rerum, dolorum iure at officiis.</p>
 </body>
 </html>
